--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,14 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-site-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.7.1</version>
+        </dependency>
     </dependencies>
+    
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
