--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>maven-site-plugin</artifactId>
             <version>3.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
     
     <pluginRepositories>
